--- a/index.html
+++ b/index.html
@@ -7,8 +7,13 @@
     <title>Theffy's review blog</title>
 </head>
 <body>
-    <nav>
-
+    <header>
+        <h1> Theffy's review blog</h1>
+    </header>
+    <nav id="navigation">
+            <a href="index.html" title="Go Home">Home</a></li>
+            <a href="about.html" title="Learn more about us">About</a></li>
+            <a href="content/contact.html" title="Contact us">Contact</a></li>
     </nav>
     <main>
         <ul>
@@ -19,7 +24,7 @@
                 <a href="https://www.amazon.com/Confident-Ruby-Patterns-Joyful-Coding-ebook/dp/B00ETE0D2S"><img src="images/cover-confident_ruby.jpg" alt="confindent ruby"></a>
             </li>
             <li>
-                <a href="https://www.amazon.com/Eloquent-Ruby-Addison-Wesley-Professional/dp/0321584104/ref=sr_1_1?hvadid=241668207091&hvdev=c&hvlocphy=9007776&hvnetw=g&hvqmt=e&hvrand=6093421496588246760&hvtargid=kwd-27231871316&hydadcr=16372_10302069&keywords=eloquent+ruby&qid=1684006165&sr=8-1&ufe=app_do%3Aamzn1.fos.006c50ae-5d4c-4777-9bc0-4513d670b6bc"><img src="images/cover-eloquent_ruby.jpg" alt="eloquent ruby"></a>
+                <a href="content/eloquent-ruby.html"><img src="images/cover-eloquent_ruby.jpg" alt="eloquent ruby"></a>
             </li>
             <li>
                 <a href="https://rubyandrails.info/books/ruby-science"><img src="images/cover-ruby_science.jpg" alt="science"></a>
