add footer, include nav inside the header

--- a/content/contact.html
+++ b/content/contact.html
@@ -9,6 +9,11 @@
 <body>
     <header>
         <h1>Contact Us</h1>
+        <nav id="navigation">
+            <a href="../index.html" title="Go Home">Home</a></li>
+            <a href="about.html" title="Learn more about us">About</a></li>
+            <a href="contact.html" title="Contact us">Contact</a></li>
+        </nav>
         <img src="../images/site-maintainer.png" alt="">
     </header>
     <section>
@@ -20,5 +25,8 @@
             <li>Facebook: <a href="">@bookreviewsite</a></li>
         </ul>
     </section>
+    <footer>
+        <h3>Theffy's book review site</h3>
+    </footer>
 </body>
 </html>
