--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
 <body>
     <header>
         <h1> Theffy's review blog</h1>
-    </header>
-    <nav id="navigation">
+        <nav id="navigation">
             <a href="index.html" title="Go Home">Home</a></li>
             <a href="about.html" title="Learn more about us">About</a></li>
             <a href="content/contact.html" title="Contact us">Contact</a></li>
-    </nav>
+        </nav>
+    </header>
     <main>
         <ul>
             <li>
@@ -34,5 +34,8 @@
             </li>
         </ul>
     </main>
+    <footer>
+        <h3>Theffy's book review site</h3>
+    </footer>
 </body>
 </html>
