--- a/content/eloquent-ruby.html
+++ b/content/eloquent-ruby.html
@@ -7,12 +7,14 @@
     <title>Book #1 - Eloquent Ruby</title>
 </head>
 <body>
-    <header><h1>Book #1 - Eloquent Ruby</h1> </header>
-    <nav id="navigation">
-        <a href="../index.html" title="Go Home">Home</a></li>
-        <a href="about.html" title="Learn more about us">About</a></li>
-        <a href="contact.html" title="Contact us">Contact</a></li>
-    </nav>
+    <header>
+        <h1>Book #1 - Eloquent Ruby</h1>
+        <nav id="navigation">
+            <a href="../index.html" title="Go Home">Home</a></li>
+            <a href="about.html" title="Learn more about us">About</a></li>
+            <a href="contact.html" title="Contact us">Contact</a></li>
+        </nav>
+     </header>
     <section id="author_info">
       <ul>
         <li> Author: Russ Olsen</li>
@@ -70,5 +72,8 @@
             Russ Olsen has helped me to gain more experience points in Ruby, and I must say that I am excited to learn more. If you too wish to learn more about Ruby, then you would be hard-pressed to find a better book than "Eloquent Ruby" in helping you to do so.
             </p>
     </div>
+    <footer>
+        <h3>Theffy's book review site</h3>
+    </footer>
 </body>
 </html>
