--- a/content/eloquent-ruby.html
+++ b/content/eloquent-ruby.html
@@ -28,7 +28,7 @@
         <li>ISBN: 860-1300202396</li>
       </ul>
     </section>
-    <div class="Description">
+    <div id="Description">
        <h4>Description:</h4>
        <ul>
         <li> Review #1 Title:  The first Ruby book I read in full within 24 hours</li>
