add css files  to all pages

--- a/content/contact.html
+++ b/content/contact.html
@@ -4,29 +4,34 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"/>
+    <link rel="stylesheet" href="../styles/style.css">
+    <link rel="stylesheet" href="../styles/contact.css">
     <title>Site contact</title>
 </head>
 <body>
     <header>
         <h1>Contact Us</h1>
         <nav id="navigation">
-            <a href="../index.html" title="Go Home">Home</a></li>
-            <a href="about.html" title="Learn more about us">About</a></li>
-            <a href="contact.html" title="Contact us">Contact</a></li>
+            <a href="../index.html" title="Go Home">Home</a>
+            <!--<a href="about.html" title="Learn more about us">About</a>-->
+            <a href="contact.html" title="Contact us">Contact</a>
         </nav>
         <img src="../images/site-maintainer.png" alt="">
     </header>
     <section>
-        <p> Welcome to our contact page! We value your feedback and would love to hear from you.</p>
+        <h3>Welcome to our contact page!</h3>
+        <p>  We value your feedback and would love to hear from you.</p>
         <p>You can contact us via email, Twitter or Facebook</p>
         <ul>
-            <li>Email: <a href="">contact@bookreviewsite.com</a></li>
-            <li>Twitter: <a href="">@bookreviewsite</a></li>
-            <li>Facebook: <a href="">@bookreviewsite</a></li>
+            <li><a href="" class="fa fa-envelope">contact@bookreviewsite.com</a></li>
+            <li> <a href="" class="fa fa-twitter">@bookreviewsite</a></li>
+            
+            <li> <a href="#" class="fa fa-facebook">@bookreviewsite</a></li>
         </ul>
     </section>
     <footer>
-        <h3>Theffy's book review site</h3>
+        &copy;2023 Theffy's book review site
     </footer>
 </body>
 </html>
