--- a/index.html
+++ b/index.html
@@ -4,38 +4,45 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="styles/style.css">
+    <link rel="stylesheet" href="styles/index.css">
     <title>Theffy's review blog</title>
 </head>
 <body>
     <header>
         <h1> Theffy's review blog</h1>
         <nav id="navigation">
-            <a href="index.html" title="Go Home">Home</a></li>
-            <a href="about.html" title="Learn more about us">About</a></li>
-            <a href="content/contact.html" title="Contact us">Contact</a></li>
+            <ul>
+               <li><a href="index.html" title="Go Home">Home</a></li>
+               <!--<li><a href="about.html" title="Learn more about us">About</a></li>-->
+               <li><a href="content/contact.html" title="Contact us">Contact</a></li>
+            </ul>
         </nav>
     </header>
     <main>
-        <ul>
-            <li>
-                <a href="https://www.goodreads.com/en/book/show/14438307"><img src="images/cover-clean_ruby.jpg" alt="Clean ruby"></a>
-            </li>
-            <li>
-                <a href="https://www.amazon.com/Confident-Ruby-Patterns-Joyful-Coding-ebook/dp/B00ETE0D2S"><img src="images/cover-confident_ruby.jpg" alt="confindent ruby"></a>
-            </li>
-            <li>
-                <a href="content/eloquent-ruby.html"><img src="images/cover-eloquent_ruby.jpg" alt="eloquent ruby"></a>
-            </li>
-            <li>
-                <a href="https://rubyandrails.info/books/ruby-science"><img src="images/cover-ruby_science.jpg" alt="science"></a>
-            </li>
-            <li>
-                <a href="https://www.amazon.com/Well-Grounded-Rubyist-Covers-Ruby-1-9-1/dp/1933988657/ref=sr_1_5?hvadid=580696239316&hvdev=c&hvlocphy=9007776&hvnetw=g&hvqmt=e&hvrand=17345604508834512915&hvtargid=kwd-12736358951&hydadcr=22565_13493330&keywords=the+well-grounded+rubyist&qid=1684006364&sr=8-5"><img src="images/cover-well_grounded_rubyist.jpg" alt="grounded rubyist"></a>
-            </li>
-        </ul>
+        <section>
+            <h2>Top 5</h2>
+            <ul id="images">
+                <li>
+                    <a href="https://www.goodreads.com/en/book/show/14438307"><img src="images/cover-clean_ruby.jpg" alt="Clean ruby"></a>
+                </li>
+                <li>
+                    <a href="https://www.amazon.com/Confident-Ruby-Patterns-Joyful-Coding-ebook/dp/B00ETE0D2S"><img src="images/cover-confident_ruby.jpg" alt="confindent ruby"></a>
+                </li>
+                <li>
+                    <a href="content/eloquent-ruby.html"><img src="images/cover-eloquent_ruby.jpg" alt="eloquent ruby"></a>
+                </li>
+                <li>
+                    <a href="https://rubyandrails.info/books/ruby-science"><img src="images/cover-ruby_science.jpg" alt="science"></a>
+                </li>
+                <li>
+                    <a href="https://www.amazon.com/Well-Grounded-Rubyist-Covers-Ruby-1-9-1/dp/1933988657/ref=sr_1_5?hvadid=580696239316&hvdev=c&hvlocphy=9007776&hvnetw=g&hvqmt=e&hvrand=17345604508834512915&hvtargid=kwd-12736358951&hydadcr=22565_13493330&keywords=the+well-grounded+rubyist&qid=1684006364&sr=8-5"><img src="images/cover-well_grounded_rubyist.jpg" alt="grounded rubyist"></a>
+                </li>
+            </ul>
+        </section>
     </main>
     <footer>
-        <h3>Theffy's book review site</h3>
+        &copy;2023 Theffy's book review site
     </footer>
 </body>
 </html>
