add new book page and new css file also new font family

--- a/index.html
+++ b/index.html
@@ -38,6 +38,9 @@
                 <li>
                     <a href="https://www.amazon.com/Well-Grounded-Rubyist-Covers-Ruby-1-9-1/dp/1933988657/ref=sr_1_5?hvadid=580696239316&hvdev=c&hvlocphy=9007776&hvnetw=g&hvqmt=e&hvrand=17345604508834512915&hvtargid=kwd-12736358951&hydadcr=22565_13493330&keywords=the+well-grounded+rubyist&qid=1684006364&sr=8-5"><img src="images/cover-well_grounded_rubyist.jpg" alt="grounded rubyist"></a>
                 </li>
+                <li>
+                    <a href="content/code-simplicity.html"><img src="images/51c4Mbgv-pL.jpg" alt="code simplicity"></a>
+                </li>
             </ul>
         </section>
     </main>
